csdp_resources/codefresh-delivery-pipelines.ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: codefresh-delivery-pipelines
spec:
  rules:
    - http:
        paths:
          - path: /webhooks/isp
            backend:
              service:
                name: isp-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/trio-app-ci
            backend:
              service:
                name: trio-app-ci-eventsource-svc
                port:
                  number: 80
            pathType: ImplementationSpecific
          - path: /webhooks/csdp/voting
            backend:
              service:
                name: voting-eventsource-svc
                port:
                  number: 80
            pathType: Prefix
      host: lrcsdp.support.cf-cd.com
